--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "aws-sdk": "^2.995.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
-    "web-vitals": "^1.1.2"
+    "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "redux-devtools": "^3.7.0",
+    "@material/react-material-icon": "^0.15.0",
     "prettier": "^2.4.1"
   }
 }
